color fixes + alignment fix

--- a/src/static/css/cfpb-chart-builder.less
+++ b/src/static/css/cfpb-chart-builder.less
@@ -26,7 +26,7 @@
     top: 80px;
     width: 100%;
     height: 0;
-    border-top: 2px solid #e3e4e5;
+    border-top: 2px solid @gray-10;
     
     .respond-to-min( 600px, {
       top: 75px;
@@ -48,8 +48,8 @@
   .chart-label {
     font-size: 16px;
     font-family: 'AvenirNextLTW01-Regular',Arial,sans-serif;
-    color: #5a5d61;
-    fill: #5a5d61;
+    color: @gray;
+    fill: @gray;
   }
 
   .highcharts-root,
@@ -97,17 +97,17 @@
 
   .highcharts-axis-line,
   .highcharts-tick {
-    stroke: #e3e4e5;
+    stroke: @gray-10;
   }
 
   .highcharts-plot-line {
-    color: #75787b;
+    color: @gray-80;
     stroke-width: 1px;
     z-index: 10;
   }
 
   .highcharts-plot-line-label {
-    color: #5a5d61;
+    color: @gray;
     top: 2px !important;
     text-align: left;
     white-space: normal !important;
@@ -224,7 +224,7 @@
     margin-top: 0 !important;
     transform: translateY(415px);
     width: 100%;
-    color: #5a5d61;
+    color: @gray;
 
     .h6();
 
@@ -243,7 +243,7 @@
       text-align: center;
       z-index: 100;
 
-      .respond-to-min( 450px, {
+      .respond-to-min( 480px, {
         text-align: left;
       });
 
@@ -301,20 +301,20 @@
       position: absolute;
       bottom: 0;
       left: 0;
-      border-bottom: 1px solid #E3E4E5;
+      border-bottom: 1px solid @gray-10;
     }
 
 
   }
 
   .highcharts-button {
-    fill: #CCE3F5;
+    fill: @pacific-20;
     font-size: 14px;
 
     &:hover {
       cursor: pointer;
       .highcharts-button-box {
-        fill: #7FB8E6;
+        fill: @pacific-60;
       }
 
     }
@@ -332,7 +332,7 @@
 
   .highcharts-button-pressed,
   .highcharts-button-hover {
-    fill: #7FB8E6;
+    fill: @pacific-60;
     font-family: "AvenirNextLTW01-Demi";
   }
 
@@ -385,13 +385,13 @@
   }
 
   .highcharts-navigator-mask-inside {
-    fill: #e3e4e5;
+    fill: @gray-10;
     fill-opacity: 0.25;
   }
 
   .highcharts-navigator-handle {
-    background-color: #fff;
-    border-color: #101820;
+    fill: @white;
+    stroke: @black;
   }
 
   // Axes
@@ -509,10 +509,10 @@
 
     // Set defaults to gray for help in troubleshooting
     .highcharts-point {
-      fill: #5a5d61;
+      fill: @gray;
       
       &.highcharts-data__unprojected {
-        fill: #101820;
+        fill: @black;
       }
 
     }
